[gd_scene load_steps=5 format=3 uid="uid://bm0lyfq84je51"]

[ext_resource type="Script" path="res://dynamic_sprite.gd" id="1_3232p"]
[ext_resource type="Texture2D" uid="uid://0raajg62552n" path="res://sprites/256x256.png" id="1_axu6l"]
[ext_resource type="Texture2D" uid="uid://cxu7i4q6p6qlx" path="res://sprites/128x128.png" id="2_yjlyd"]
[ext_resource type="Texture2D" uid="uid://bjft3xn2g356a" path="res://sprites/64x64.png" id="3_i36w5"]

[node name="DynamicSprite" type="Node2D"]
script = ExtResource("1_3232p")

[node name="SpriteHigh" type="Sprite2D" parent="."]
texture = ExtResource("1_axu6l")

[node name="SpriteMed" type="Sprite2D" parent="."]
texture = ExtResource("2_yjlyd")

[node name="SpriteLow" type="Sprite2D" parent="."]
texture = ExtResource("3_i36w5")
